# electrical-fault-detection-and-classification

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/electrical_fault_detection_and_classification/: __about__.py  __init__.py  exploration.ipynb  main.ipynb  main.py  models.py
